Fix footer size on iphone.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,7 +70,7 @@ body {
 
 .footer ul {
   margin: 10px auto 20px;
-  width: 450px;
+  width: 500px;
   list-style: none
 }
 
